--- a/tags/csds60analyzer/src/csds60analyzer/csds60analyzerGUI.form
+++ b/tags/csds60analyzer/src/csds60analyzer/csds60analyzerGUI.form
@@ -19,6 +19,9 @@
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
       <Color blue="ff" green="ff" red="ff" type="rgb"/>
     </Property>
+    <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+      <Color id="Cursor predeterminado"/>
+    </Property>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
